--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ description: Transform your plain text into static websites and blogs
 # url: https://jekyllrb.com
 # repository: https://github.com/jekyll/jekyll
 timezone: America/Los_Angeles
-logo: "/img/logo-2x.png"
-google_analytics_id: UA-50755011-1
+logo: "/img/transperant_logo.png"
+google_analytics_id: "UA-143724740-1"
 google_site_verification: onQcXpAvtHBrUI5LlroHNE_FP0b2qvFyPq7VZw36iEY
 
 # Build settings
