--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,7 +1,8 @@
 # config.yml
 
 backend:
-  name: jndctranslation
+  name: github
+  repo: jndctranslation/landing_page
   branch: master # Branch to update (optional; defaults to master)
 media_folder: 'img'
 
