--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -6,8 +6,8 @@ introduce_color_overlay: 'rgba(33, 34, 88, 0.5)'
 introduce_text_color: 'light_text'
 
 introduce_menu:
-  - title: "Overview"
-    link: "#overview"
+  - title: 'Overview'
+    link: '#overview'
   - title: 'Vision'
     link: '#vision'
   - title: 'Belief'
