--- a/admin/config.yml
+++ b/admin/config.yml
@@ -31,3 +31,39 @@ collections:
         file: '_data/pages/home.yml'
         fields:
         - {label: 'Introduce Quote', name: 'introduce_quote', widget: 'string'}
+        - {label: 'Introduce Button', name: 'introduce_button', widget: 'string'}
+        - {label: 'Link Introduce Button', name: 'link_introduce_button', widget: 'string'}
+        - {label: 'Introduce Background Image', name: 'introduce_background_image', widget: 'string'}
+        - {label: 'Introduce Color Overlay', name: 'introduce_color_overlay', widget: 'string'}
+        - {label: 'Introduce Text Color', name: 'introduce_text_color', widget: 'select', option: ['light_text', dark_text]}
+
+        - {label: 'Overview Title', name: 'overview_title', widget: 'string'}
+        - {label: 'Overview Text', name: 'overview_text', widget: 'string'}
+        - {label: 'Overview Background Image', name: 'overview_background_image', widget: 'string'}
+        - {label: 'Overview Color Overlay', name: 'overview_color_overlay', widget: 'string'}
+        - {label: 'Overview Text Color', name: 'overview_text_color', widget: 'select', option: ['light_text', dark_text]}
+
+        - {label: 'Overview Title', name: 'overview_title', widget: 'string'}
+        - {label: 'Overview Text', name: 'overview_text', widget: 'string'}
+        - {label: 'Overview Background Image', name: 'overview_background_image', widget: 'string'}
+        - {label: 'Overview Color Overlay', name: 'overview_color_overlay', widget: 'string'}
+        - {label: 'Overview Text Color', name: 'overview_text_color', widget: 'select', option: ['light_text', dark_text]}
+
+        - {label: 'Overview Title', name: 'overview_title', widget: 'string'}
+        - {label: 'Overview Text', name: 'overview_text', widget: 'string'}
+        - {label: 'Overview Background Image', name: 'overview_background_image', widget: 'string'}
+        - {label: 'Overview Color Overlay', name: 'overview_color_overlay', widget: 'string'}
+        - {label: 'Overview Text Color', name: 'overview_text_color', widget: 'select', option: ['light_text', dark_text]}
+
+        - {label: 'Belief Title', name: 'belief_title', widget: 'string'}
+        - label: 'Belief Text'
+          name: 'belief_text'
+          widget: 'list'
+          fields:
+          - {label: 'Title', name: 'title', widget: 'string'}
+          - {label: 'Text', name: 'text', widget: 'string'}
+          - {label: 'Icon Image', name: 'icon', widget: 'image'}
+        - {label: 'Belief Background Image', name: 'belief_background_image', widget: 'string'}
+        - {label: 'Belief Color Overlay', name: 'belief_color_overlay', widget: 'string'}
+        - {label: 'Belief Text Color', name: 'belief_text_color', widget: 'select', option: ['light_text', dark_text]}
+        
