required to false

--- a/_data/primary_nav.yml
+++ b/_data/primary_nav.yml
@@ -1,12 +1,12 @@
 - title: "Home"
   link: "/"
 - title: "Services"
-  link: "services.html"
+  link: "/services"
 - title: "Expertise"
-  link: "expertise.html"
+  link: "/expertise"
 - title: "Software"
-  link: "software.html"
+  link: "/software"
 - title: "Language"
-  link: "language.html"
+  link: "/language"
 - title: "Contact"
-  link: "contact.html"
+  link: "/contact"
