--- a/_data/information.yml
+++ b/_data/information.yml
@@ -3,7 +3,7 @@ address: Hanoi Vietnam
 email_address: johnanddavidcompany@gmail.com
 social:
   - icon: facebook-logo.png
-    link: ''
+    link: 'https://www.facebook.com/JohnandDavidCompany/'
   - icon: linkedin-logo.png
     link: linkedin.com
   - icon: twitter-logo.png
