--- a/admin/config.yml
+++ b/admin/config.yml
@@ -34,13 +34,13 @@ collections:
         - {label: 'Introduce Button', name: 'introduce_button', widget: 'string', required: false}
         - {label: 'Link Introduce Button', name: 'link_introduce_button', widget: 'string', required: false}
         - {label: 'Introduce Background Image', name: 'introduce_background_image', widget: 'image', required: false}
-        - {label: 'Introduce Color Overlay', name: 'introduce_color_overlay', widget: 'string', required: false}
+        - {label: 'Introduce Color Overlay', name: 'introduce_color_overlay', widget: 'color', required: false}
         - {label: 'Introduce Text Color', name: 'introduce_text_color', widget: 'select', options: ['light_text', 'dark_text'], required: false}
 
         - {label: 'Overview Title', name: 'overview_title', widget: 'string', required: false}
         - {label: 'Overview Text', name: 'overview_text', widget: 'string', required: false}
         - {label: 'Overview Background Image', name: 'overview_background_image', widget: 'image', required: false}
-        - {label: 'Overview Color Overlay', name: 'overview_color_overlay', widget: 'string', required: false}
+        - {label: 'Overview Color Overlay', name: 'overview_color_overlay', widget: 'color', required: false}
         - {label: 'Overview Text Color', name: 'overview_text_color', widget: 'select', options: ['light_text', 'dark_text'], required: false}
 
         - {label: 'Vision Title', name: 'vision_title', widget: 'string', required: false}
