--- a/_data/header.yml
+++ b/_data/header.yml
@@ -14,7 +14,7 @@ primary_nav:
   logo: /img/transparent_logo.png
   items:
   - title: 'About'
-    link: '/about'
+    link: '/pages/about'
 
   - title: 'Services'
     sub_nav:
